<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dose</string>
    <string name="action_settings">Settings</string>
    <string name="addNew">Add new dosage</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="medicationHint">what? e.g. Antibiotics</string>
    <string name="dosageHint">e.g. 2</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="action_sync">Sync</string>
    <string name="add_name_label">I\'m taking</string>
    <string name="of">of</string>
    <string name="edit">Save</string>

</resources>
