<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp" >

    <LinearLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddActivity" >

        <RelativeLayout
            android:id="@+id/add_top_relative"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/imtaking"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/add_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/addQuantity"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/imtaking"
                android:ems="10"
                android:hint="@string/dosageHint"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/addUnit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/addQuantity"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/addQuantity" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/of"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/of"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/addName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/of"
                android:ems="10"
                android:hint="@string/medicationHint"
                android:inputType="textCapSentences" />

        </RelativeLayout>

        <TimePicker
            android:id="@+id/addTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/add_button"
        android:onClick="addDose"
        android:text="@string/add"
        android:textColor="@color/add_button_text" />

</FrameLayout>